# MHE

./: .gitignore  CMakeLists.txt  README.md  light_up_puzzle.h  main.cpp  main2.cpp  puzzle.json
Python/: main.py
Python/gens/: __init__.py  gen_algs.py
Python/light_up/: puzzle.py
algs/: full_audit.cpp  full_audit.h  hill_climbing.cpp  hill_climbing.h  random_hill_climbing.cpp  random_hill_climbing.h  random_sampling.cpp  random_sampling.h  simulated_annealing.cpp  simulated_annealing.h  tabu.cpp  tabu.h
genetic/: genetic.cpp  genetic.h
puzzle/: puzzle.cpp  puzzle.h  services.cpp  services.h
w01/: CMakeLists.txt
w01/src/: app.cpp
w02/: main.cpp
zadanie01/: .gitignore  CMakeLists.txt  main.cpp  windows_settings.json
zadanie01/src/: app.cpp
zadanie02/: CMakeLists.txt  main.cpp
zadanie03/src/: main.cpp
zadanie1/: Makefile
zadanie1/src/: app.cpp  window_settings.json
